# golem

./: Cargo.toml  flake.nix
src/: app.rs  data.rs  direction.rs  face_buffers.rs  geometry.wgsl  main.rs  render.rs  shader.wgsl
