[package]
name = "golem"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytemuck = { version = "1.22.0", features = ["derive"] }
pollster = "0.4.0"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = "0.3.19"
wgpu = { version = "24.0.3", features = ["glsl", "spirv", "static-dxc"] }
winit = "0.30.9"
